# dockerdiscordbot

./: .gitignore  Dockerfile  README.md  pyproject.toml  release.ps1  release.ps1.example
app/: main.py
